--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,11 @@
             <version>2.1</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.9</version>
+        </dependency>
     </dependencies>
 </project>
